--- a/client/components/domains/domain-suggestion/style.scss
+++ b/client/components/domains/domain-suggestion/style.scss
@@ -259,7 +259,7 @@
 body.is-section-signup.is-white-signup {
 	.featured-domain-suggestions {
 		.domain-registration-suggestion__title {
-			font-size: 1.625rem;
+			font-size: 1.625rem; /* stylelint-disable-line scales/font-size */
 		}
 	}
 
@@ -304,7 +304,7 @@ body.is-section-signup.is-white-signup {
 
 			.domain-product-price__free-price {
 				font-size: $font-body;
-				
+
 				@include break-mobile {
 					font-size: $font-body-small;
 				}
@@ -312,7 +312,7 @@ body.is-section-signup.is-white-signup {
 
 			.domain-product-price__free-text {
 				font-size: $font-body;
-				
+
 				@include break-mobile {
 					font-size: $font-body-small;
 				}
@@ -351,7 +351,7 @@ body.is-section-signup.is-white-signup {
 					}
 				}
 			}
-	
+
 			&.domain-transfer-suggestion {
 				$cod-grey: #2b2d2f;
 
@@ -366,4 +366,13 @@ body.is-section-signup.is-white-signup {
 			}
 		}
 	}
+}
+
+.domain-suggestion__price-placeholder {
+	animation: loading-fade 1.6s ease-in-out infinite;
+	background-color: var( --color-neutral-0 );
+	color: transparent;
+	height: 16px;
+	margin: auto 0;
+	width: 20%;
 }
